<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="Тестирование сотдурников"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/dodo1"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="395dp"
        android:layout_height="500dp"
        android:layout_marginTop="90dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="0.2dp"
                    android:text="@string/quest1" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:entries="@array/q1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:text="@string/quest2" />

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:entries="@array/q2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:text="@string/quest3" />

                <Spinner
                    android:id="@+id/spinner3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:entries="@array/q3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:text="@string/quest4" />

                <Spinner
                    android:id="@+id/spinner4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:entries="@array/q4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="51dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:text="@string/quest5" />

                <Spinner
                    android:id="@+id/spinner5"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="50dp"
                    android:entries="@array/q5" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="51dp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:text="@string/quest6" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="200dp"
                    android:layout_height="45dp"
                    android:ems="10"
                    android:inputType="textPersonName" />


            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="550dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="sendMessage"
        android:text="Отправить" />

</RelativeLayout>